Fixed wrong z-index for <Header/>

--- a/ui-service/src/common/components/header/header.scss
+++ b/ui-service/src/common/components/header/header.scss
@@ -11,7 +11,7 @@ $header-height: 40px;
     left: 0;
     right: 0;
     height: $header-height;
-    z-index: 1;
+    z-index: 100;
 
     &-content {
         display: flex;
